Removed forbidden API method and Javadoc tags that caused build-pipeline checks to fails